compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__suggest_wrapping_a_function_return_value_in_ok.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub fn main() -> Result(Int, Bool) {\n  1\n}\n"
---
----- SOURCE CODE

pub fn main() -> Result(Int, Bool) {
  1
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:3
  │
3 │   1
  │   ^ Did you mean to wrap this in an `Ok`?

The type of this returned value doesn't match the return type
annotation of this function.

Expected type:

    Result(Int, Bool)

Found type:

    Int
